--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       body {
         font-family: g1, sans-serif;  /* Adjust font family as desired */
         direction: rtl;
+        max-width: 100vw;
+        overflow-x: hidden;
       }
 
       .hand {
@@ -37,13 +39,15 @@
         top: 0;
         left: 0;
       }
-
+      .quote {
+        margin-top:20px
+      }
       .title {
         font-size: 2rem;  /* Adjust font size as desired */
       }
 
-      .content {
-        max-width: 500px;
+      .section1 {
+        max-width: 350px;
         margin: 30px auto 0;
         text-align: justify;  /* Adjust text alignment as desired */
       }
@@ -68,13 +72,6 @@
         padding: 0;
       }
 
-      /* Logos */
-      .logo1,
-      .logo2 {
-        width: 100px;  /* Adjust logo width as desired */
-        height: auto;  /* Maintain aspect ratio */
-        margin: 0 auto 1rem;  /* Center logos with some margin */
-      }
       .section2
       {
         width: 350px;
@@ -82,22 +79,29 @@
         background: rgba(255, 255, 255, 0.7);
         padding: 1px 50px;
       }
+      .logos {
+        width:160px;
+        margin:0 auto;
+      }
       .logo {
-        width: 50px;
-        height: 50px;
+        width: 75px;
+        height: 75px;
       }
   </style>
 </head>
 <body>
     <div class="container">
         <header class="header">
-            <img class="logo" src="./shiraLogo.jpg" />
+          <div class="logos">
+            <img class="shiraLogo logo" src="./shiraLogo.jpg" />
+            <img class="michalLogo logo" src="./shiraLogo.jpg" />
+          </div>
         </header>
         <section class="content">
-            <p class="hand text-center">על הפרי שלא הבשיל עוד ונאסף (נעמי שמר)</p>
+            <p class="hand quote text-center">על הפרי שלא הבשיל עוד ונאסף (נעמי שמר)</p>
             <p class="hand title text-center">ריטריט לעיבוד חווית הפלה</p>
 
-            <p class="text">
+            <p class="section1">
                 חלק ממעגל הפיריון מחזיק בתוכו גם אבל ואבדן,
                 ההפלה היא שער רחב שמתרחשים בו דברים עצמתיים בגוף,
                 בנפש וברוח. אם חווית אבדן הריון ואת מרגישה את הצורך
