--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         padding: 10px 0;  /* Adjust padding as desired */
         background: #fdfdfd;
         width: 100vw;
-        position: relative;
+        position: fixed;
         top: 0;
         left: 0;
       }
@@ -68,8 +68,8 @@
         background-size: cover;
         min-height: 100vh;  /* Set minimum height for full viewport */
         min-width: 100vw;
-        margin: 0;
-        padding: 0;
+        margin: 95px 0 0;
+        padding: 10px 0 0;
       }
 
       .section2
