change font weight

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         @font-face {
           font-family: g1;
-          src: url(MPLUS1p-Regular.ttf);
+          src: url(MPLUS1p-Medium.ttf);
         }
         
       body {
@@ -75,9 +75,10 @@
       .section2
       {
         width: 350px;
-        margin: 0 auto;
+        margin: 30px auto;
         background: rgba(255, 255, 255, 0.7);
-        padding: 1px 50px;
+        padding: 1px 50px 20px;
+        line-height: 29px;
       }
       .logos {
         width:160px;
@@ -119,9 +120,9 @@
               </div>
               <div class="details">
                       בנתיים רשמי לך ביומן:<br/>
-                      15:00 9:30 יד איר 22 במאי. בין<br/>
-                      0508193588-מיכל <br/>
-                      0505803600-שירה<br/>
+                      15:00 - 9:30 י"ד באייר, 22 במאי. בין<br/>
+                      0508193588 - מיכל<br/>
+                      0505803600 - שירה<br/>
               </div>
             </div>
         </section>
