--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
           מיכל- 050-8193588<br/>
           שירה- 050-5803600<br/>
           תשלום בקבוצת הפייבוקס ממש 
-          <a href=''>כאן</a>
+          <a href='https://payboxapp.page.link/87THFWSF9R1N6DkB9'>כאן</a>
           <br/>
         </div>
         </section>
