--- a/index.html
+++ b/index.html
@@ -176,9 +176,10 @@
       }
 
       h3.title {
-	margin-bottom: 30px;
+	      margin-bottom: 30px;
         font-size: 50px;
         color:#7D5858;
+        text-align:justify;
       }
       .content {
         padding-bottom: 40px;
@@ -201,6 +202,22 @@
       video {
         width: 100%;
 	     height:200px;
+      }
+      .price {
+        font-size: 35px;
+      }
+      .price::after {
+        content:' ₪'
+      }
+      .old {
+        text-decoration: line-through;
+        text-decoration-color: #222;
+      }
+      .payment {
+        font-size: 18px;
+      }
+      .wa img {
+        width: 200px;
       }
   </style>
 </head>
@@ -260,7 +277,7 @@
             <img class="aboutMeImg" src="./michal.jpeg" />
             <div class="aboutMeText">
             מי אני?<br/>
-            אמא ל-6 מתוקים, דולה, מדריכת הכנה ללידה, מלווה נשים סביב הפלות, מתעסקת בתנועה, תלמידה ותיקה של שיטת ימימה, חיה ונושמת ליווי של נשים סביב מעגל הפוריות
+            אמא ל-6 מתוקים, דולה, מדריכת הכנה ללידה, מלווה נשים בתהליכי הפלה, עוסקת בתנועה, תלמידה ותיקה של שיטת ימימה, חיה ונושמת ליווי של נשים סביב מעגל הפוריות
             </div>
           </div>
           <div class="me shira">
@@ -316,23 +333,27 @@
         </section>
         <section class="content cost">
             <div class="whiteSec">
-	    <h3 class="title hand">מחיר הריטריט</h3>
-              הפעם אנו מציעות את הריטריט במחיר הכרות לרגל הפעם הראשונה-<br/>
-              רק 350 שח במקום 470 מחיר רגיל.<br/>
-              אם את מהירת החלטה תהני בנוסף ממחיר של הרשמה מוקדמת:<br/>
-              300 שח לנרשמות עד ה 15.5 ז' אייר<br/>
-              350 שח לנרשמות החל מה 16.5 ח' אייר.
-	<div id="section6"></div>
-             </div>
+	            <h3 class="title hand">מחיר הריטריט</h3>
+              מחיר השקה:<br/>
+              <span class="new price">350</span><br/>
+              במקום<br/>
+              <span class="old price">600</span><br/>
+              למהירות החלטה (עד ה-15.5) הנחה נוספת:<br/>
+              <span class="new price">300</span><br/>
+              <span class="payment">
+                תשלום בקבוצת הפייבוקס ממש 
+                <a href='https://payboxapp.page.link/87THFWSF9R1N6DkB9'>כאן</a>
+              </span>
+            </div>
         </section>
         <section class="content reg">
           <div class="whiteSec">
- 	 <h3 class="title hand">איך נרשמות?</h3>
-          את יכולה לכתוב ווצאפ לאחת מאיתנו<br/><br/>
-          מיכל- 050-8193588<br/>
-          שירה- 050-5803600<br/>
-          תשלום בקבוצת הפייבוקס ממש 
-          <a href='https://payboxapp.page.link/87THFWSF9R1N6DkB9'>כאן</a>
+ 	        <h3 class="title hand">איך נרשמות?</h3>
+          בוואטסאפ או בטלפון<br/><br/>
+          <a class="wa" href='https://wa.me/0508193588?text=הי+מיכל'><img src="whatsapp.png"></a>
+          מיכל - 050-8193588<br/>
+          <a class="wa" href='https://wa.me/0505803600?text=הי+שירה'><img src="whatsapp.png"></a>
+            050-5803600 - שירה</a><br/>
           <br/>
         </div>
         </section>
