--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             אז מתאים לך לצלול איתנו פנימה?<br/>
             <br/>
             מה הולך להיות?<br/>
-            ניפגש בחוות קשואלה הקסומה, ניגע ברחם פיזית ורגשית, נעשה יוגה, נשיל את המיותר, ניקח זמן קצר להתבודדות בין עצי אקליפטוס, ונהנה מכל מה שיש ליער להציע לנו- אדמה טובה, אויר צלול, שבט נשים, ארוחה מזינה וצמחונית <br/>(חלבית עם מגוון פרווה- דאגנו לכך שגם אם את טבעונית תמצאי שפע מזין ולא תישארי רעבה 😊)
+            ניפגש בחוות קשואלה הקסומה, ניגע ברחם פיזית ורגשית, נעשה יוגה, נשיל את המיותר, ניקח זמן קצר להתבודדות בין עצי אקליפטוס, ונהנה מכל מה שיש ליער להציע לנו- אדמה טובה, אויר צלול, שבט נשים, ארוחה מזינה וצמחונית            
       	<div id="section1">
       	</div>
           	</div>
